# heavyhex-qft

./: README.md  pyproject.toml
heavyhex_qft/: elements.py  linalg.py  plaquette_dual.py  pure_z2_lgt.py  rectangular_z2.py  subspace.py  triangular_z2.py  utils.py
notebooks/: rectangular_z2.ipynb  rectangular_z2_trotter.ipynb  triangular_z2.ipynb  triangular_z2_dual.ipynb  triangular_z2_trotter.ipynb
subspace_lgt/: triangular_z2.py
