[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heavyhex-qft"
version = "0.2.0"
authors = []
description = "Quantum field theory on heavy-hex lattices."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "qiskit",
    "rustworkx"
]
